Removed Classes form core server